# dynamic_visual_sgraphs

./: .gitignore  CMakeLists.txt  Dependencies.md  README.md  package.xml
.devcontainer/: devcontainer.json
config/: README.md  mprocs.yml  system_params.yaml
config/Monocular-Inertial/: EuRoC.yaml  LuxVSD_RS_D435i_640.yaml  RealSense_D435i.yaml  RealSense_T265.yaml  TUM-VI.yaml  TUM-VI_far.yaml  UniLu_RealSense_D435i_640.yaml
config/RGB-D/: SMapper_RealSense.yaml
config/RGB-D-Inertial/: RealSense_D435i.yaml  SMapper_RealSense.yaml
config/Visualization/: kitti_no_imu.rviz  live_rs_d435i.rviz  ntuviral_no_imu.rviz  orb_slam3_no_imu.rviz  orb_slam3_rgbd.rviz  orb_slam3_with_imu.rviz  vsgraphs_mono.rviz  vsgraphs_mono_imu.rviz  vsgraphs_rgbd.rviz  vsgraphs_rgbd2.rviz  vsgraphs_rgbd_asier.rviz  vsgraphs_rgbd_imu.rviz  vsgraphs_stereo.rviz  vsgraphs_stereo_imu.rviz
core/include/: Atlas.h  Config.h  Converter.h  DatabaseParser.h  Frame.h  FrameDrawer.h  G2oTypes.h  GeoSemHelpers.h  GeometricSegmentation.h  GeometricTools.h  ImuTypes.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  MLPnPsolver.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  SemanticSegmentation.h  SemanticsManager.h  SerializationUtils.h  Settings.h  Sim3Solver.h  System.h  Tracking.h  TwoViewReconstruction.h  Utils.h  Viewer.h
core/include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
core/include/Geometric/: Plane.h
core/include/Semantic/: Door.h  Floor.h  Marker.h  Room.h
core/include/Types/: SystemParams.h
core/src/: Atlas.cc  Config.cc  Converter.cc  DatabaseParser.cc  Frame.cc  FrameDrawer.cc  G2oTypes.cc  GeoSemHelpers.cc  GeometricSegmentation.cc  GeometricTools.cc  ImuTypes.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MLPnPsolver.cpp  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  OptimizableTypes.cpp  Optimizer.cc  SemanticSegmentation.cc  SemanticsManager.cc  Settings.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Utils.cc  Viewer.cc
core/src/CameraModels/: KannalaBrandt8.cpp  Pinhole.cpp
core/src/Geometric/: Plane.cc
core/src/Semantic/: Door.cc  Floor.cc  Marker.cc  Room.cc
core/src/Types/: SystemParams.cc
doc/: INSTALLATION.md  ROS.md
doc/RealSense/: README.md
doc/voxblox/: Dockerfile  docker-compose.yml
docker/: Jazzy.Dockerfile  Jazzy_new.Dockerfile  Noetic.Dockerfile  README.md  docker-compose.yml  requirements.txt
evaluation/: README.md  config.yaml  generate_kf_pose_txt_files.py  generate_pose_txt_files.py
include/: common.h
launch/: README.md  mono-imu.launch.py  rgbd-imu.launch.py  rgbd.launch.py  vs_graphs.launch  vs_graphs.launch.py
msg/: VSGraphsAllDetectdetRooms.msg  VSGraphsAllWallsData.msg  VSGraphsRoomData.msg  VSGraphsWallData.msg
src/: common.cc  ros_mono.cc  ros_mono_inertial.cc  ros_rgbd.cc  ros_rgbd_inertial.cc  ros_stereo.cc  ros_stereo_inertial.cc
src/AR/: ros_mono_ar.cc
